--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@ POSTGRES_USER=postgresuser
 # DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=8??!9X%;>}R2vB*98Ca8,Hk??I;Lv2qHb@,t0Zs$sZ@!gFja+d
+DJANGO_SECRET_KEY=o#/`X<cm@itt3j,@kd$lc&5_U:}5.spO}>Nre6FiG!;W`nj=1e
 DJANGO_ALLOWED_HOSTS=.example.com
 
 # AWS Settings
