auto: generated code

--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@ POSTGRES_USER=postgresuser
 # DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=o#/`X<cm@itt3j,@kd$lc&5_U:}5.spO}>Nre6FiG!;W`nj=1e
+DJANGO_SECRET_KEY==#(?ch+<=uYjC_c(Q&R|QTNxOOebOPDpE(%s}n-<qJ?`LW9-W-
 DJANGO_ALLOWED_HOSTS=.example.com
 
 # AWS Settings
