--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@ POSTGRES_USER=postgresuser
 # DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=@0t5-_<.(|&&!qz;u1]CZa23[@X-3YsMFCWix)HBe!+2L.xU|(
+DJANGO_SECRET_KEY=f!Xzs$[Y$a@2GaF[yim|r=g&!|b],U6XV5Z,8o]!({`-iq5dg^
 DJANGO_ALLOWED_HOSTS=.example.com
 
 # AWS Settings
