--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@ POSTGRES_USER=postgresuser
 # DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=f!Xzs$[Y$a@2GaF[yim|r=g&!|b],U6XV5Z,8o]!({`-iq5dg^
+DJANGO_SECRET_KEY=%Zb])d$zrac[:;7T&Jm(WVUdLJsC0_NATf]q#%m]}1gyUGX_pa
 DJANGO_ALLOWED_HOSTS=.example.com
 
 # AWS Settings
