--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@ POSTGRES_USER=postgresuser
 # DJANGO_READ_DOT_ENV_FILE=True
 DJANGO_ADMIN_URL=
 DJANGO_SETTINGS_MODULE=config.settings.production
-DJANGO_SECRET_KEY=%Zb])d$zrac[:;7T&Jm(WVUdLJsC0_NATf]q#%m]}1gyUGX_pa
+DJANGO_SECRET_KEY=XhmD_p:]![0v{9^#/vgt0?`*;T`Xj+@iH65WXpCI1ue~zHY|@|
 DJANGO_ALLOWED_HOSTS=.example.com
 
 # AWS Settings
